add grafics by distribution